--- a/nginx.conf
+++ b/nginx.conf
@@ -45,8 +45,7 @@ http {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "upgrade-insecure-requests" always;
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+    # Note: HSTS removed as this is a proxy server, not a web server
 
     # Hide server info
     server_tokens off;
